src/managed/interop/DialogueInterop.h

//------------------------------------------------------------------------------
// Callback Registration (C# subscribes to these)
//------------------------------------------------------------------------------

// Callback function pointer types
typedef void (*DialogueStartedCallback)(const char* title);
typedef void (*DialogueEndedCallback)();
typedef void (*DialogueLineCallback)(const char* speaker, const char* text, int choiceCount);
typedef void (*DialogueEmoteCallback)(const char* emoteName);
typedef void (*DialogueStateChangeCallback)(const char* key, const char* value);
typedef void (*DialogueEmotionCallback)(const char* emotionName);
typedef void (*DialogueTypingCompleteCallback)();
typedef void (*DialogueCharTypedCallback)(char c);
// Game command callbacks
typedef void (*DialogueGiveItemCallback)(const char* itemId, int count);
typedef void (*DialogueTakeItemCallback)(const char* itemId, int count);
typedef void (*DialogueStartQuestCallback)(const char* questId);
typedef void (*DialogueCompleteStepCallback)(const char* questId, const char* stepId);
typedef void (*DialoguePlayAnimCallback)(const char* animName);
typedef void (*DialoguePlaySoundCallback)(const char* soundPath);
typedef void (*DialogueWaitCallback)(float seconds);
typedef void (*DialogueCameraCallback)(const char* action, const char* target);
typedef void (*DialogueSetEventCallback)(const char* eventName, const char* eventState);